Compare iphones description v-alignment fixed

--- a/src/lesson_6/lesson_6.css
+++ b/src/lesson_6/lesson_6.css
@@ -319,6 +319,11 @@ h4 {
   height: 100%;
 }
 
+.section__compare-iphones .section__description {
+  display: flex;
+  align-items: center;
+}
+
 .section__compare-iphones .section__img {
   background-image: url(../../assets/images/lesson_6/compare_large_2x.jpg);
   width: 587px;
@@ -408,6 +413,10 @@ h4 {
     width: 321px;
     height: 229px;
     margin-top: 35px;
+  }
+
+  .section__compare-iphones {
+    margin-top: 12px;
   }
 
   .section__compare-iphones .section__content {
